<?xml version="1.0"?>
<package format="2">
  <name>arm</name>
  <version>0.0.0</version>
  <description>The arm package. This contains arm mcu scripts, helpers etc.

    ArmNode.py will open a UART or USB serial port based on the input arguments.
    It can be opened directly or through the task_handler.
    This node listens to the serial port and based on the data it will know where to send it.
    It subscribes to the arm_command topic and to arm_request client requests and
    then either sends back feedback through the arm_feedback topic, the arm_joint_states topic,
    or ArmRequest.srv.


  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jason.klimock@spaceconcordia.ca">jason</maintainer>
  <maintainer email="josh.glazer@spaceconcordia.ca">Josh Glazer</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
