<package format="2">
  <name>astro_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for astro_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for the ASTRo Manipulator</p>
  </description>
  <author>Space Concordia Robotics</author>
  <maintainer email="robotics@spaceconcordia.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <architecture_independent />
  </export>
</package>
