<package format="2">
  <name>camera_vision</name>
  <version>0.0.0</version>
  <description>
    custom package for our camera vision
  </description>

  <maintainer email="robotics@spaceconcordia.ca">Space Concordia Robotics</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
