<package format="2">
  <name>collarm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for collarm</p>
    <p>This package contains configuration data, 3D models and launch files
for collarm robot</p>
  </description>
  <author>alihessami</author>
  <maintainer email="ali.hessami@spaceconcordia.ca" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>