<package format="2">
  <name>colllarm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for colllarm</p>
    <p>This package contains configuration data, 3D models and launch files
for colllarm robot</p>
  </description>
  <author>alihessami</author>
  <maintainer email="ali.hessami@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>